added ship names to units

--- a/server/config/units.cfg
+++ b/server/config/units.cfg
@@ -13,3 +13,26 @@ radius = 10
 maxAttacks = 4
 maxMovement = 10
 maxHealth = 70
+
+[Weapons Platform]
+
+
+[Carrier]
+
+[Cruiser]
+
+[Blitz]
+
+[Engineering]
+
+[Radar]
+
+[Mine Layer]
+
+[Kamakazi]
+
+[EMP]
+
+[Stealth]
+
+[FTL]
