Added default values for ships to be tested

--- a/server/config/units.cfg
+++ b/server/config/units.cfg
@@ -1,38 +1,116 @@
 [BattleShip]
 cost = 20
-damage = 10
-radius = 100
+damage = 36
+radius = 90
+maxAttacks = 2
+maxMovement = 240
+maxHealth = 550
+range = 150
+
+[Juggernaut]
+cost = 12
+damage = 7
+radius = 40
+maxAttacks = 6
+maxMovement = 130
+maxHealth = 300
+range = 80
+
+[Mine Layer]
+cost = 8
+damage = 0
+radius = 30
+maxAttacks = 12
+maxMovement = 130
+maxHealth = 250
+range = 120
+
+[Engineering]
+cost = 8
+damage = 0
+radius = 30
+maxAttacks = 0
+maxMovement = 100
+maxHealth = 200
+range = 80
+
+[EMP]
+cost = 8
+damage = 0
+radius = 35
 maxAttacks = 1
 maxMovement = 100
-maxHealth = 500
+maxHealth = 220
+range = 70
+
+[Stealth]
+cost = 6
+damage = 10
+radius = 30
+maxAttacks = 2
+maxMovement = 180
+maxHealth = 80
+range = 70
+
+[Radar]
+cost = 6
+damage = 15
+radius = 30
+maxAttacks = 0
+maxMovement = 100
+maxHealth = 160
+range = 70
+
+[Cruiser]
+cost = 6
+damage = 10
+radius = 25
+maxAttacks = 2
+maxMovement = 140
+maxHealth = 240
+range = 60
+
+[Weapons Platform]
+cost = 6
+damage = 16
+radius = 30
+maxAttacks = 1
+maxMovement = 40
+maxHealth = 120
+range = 1000
+
+[FTL]
+cost = 4
+damage = 5
+radius = 24
+maxAttacks = 3
+maxMovement = 160
+maxHealth = 70
+range = 60
 
 [Fighter]
 cost = 2
-damage = 1
-radius = 10
-maxAttacks = 4
-maxMovement = 10
+damage = 4
+radius = 24
+maxAttacks = 3
+maxMovement = 160
 maxHealth = 70
-
-[Weapons Platform]
-
-
-[Carrier]
-
-[Cruiser]
+range = 60
 
 [Blitz]
-
-[Engineering]
-
-[Radar]
-
-[Mine Layer]
+cost = 2
+damage = 2
+radius = 20
+maxAttacks = 3
+maxMovement = 200
+maxHealth = 50
+range = 50
 
 [Kamakazi]
-
-[EMP]
-
-[Stealth]
-
-[FTL]
+cost = 2
+damage = 50
+radius = 20
+maxAttacks = 0
+maxMovement = 140
+maxHealth = 50
+range = 0
