Tweaked the units.cfg some more. Added some basic unit-specific logic

--- a/server/config/units.cfg
+++ b/server/config/units.cfg
@@ -1,116 +1,149 @@
+[Warp Gate]
+type = warpGate
+cost = 0
+damage = 0
+radius = 60
+maxAttacks = 0
+maxMovement = 40
+maxHealth = 800
+range = 0
+
 [BattleShip]
+type = battleShip
 cost = 20
 damage = 36
-radius = 90
+radius = 45
 maxAttacks = 2
 maxMovement = 240
-maxHealth = 550
+maxHealth = 400
 range = 150
 
 [Juggernaut]
+type = juggernaut
 cost = 12
 damage = 7
-radius = 40
+radius = 20
 maxAttacks = 6
 maxMovement = 130
-maxHealth = 300
+maxHealth = 240
 range = 80
 
 [Mine Layer]
+type = mineLayer
 cost = 8
 damage = 0
-radius = 30
+radius = 15
 maxAttacks = 12
 maxMovement = 130
-maxHealth = 250
+maxHealth = 180
 range = 120
 
 [Engineering]
+type = engineering
 cost = 8
 damage = 0
-radius = 30
+radius = 15
 maxAttacks = 0
 maxMovement = 100
-maxHealth = 200
+maxHealth = 160
 range = 80
 
 [EMP]
+type = emp
 cost = 8
 damage = 0
-radius = 35
+radius = 15
 maxAttacks = 1
-maxMovement = 100
-maxHealth = 220
-range = 70
-
-[Stealth]
-cost = 6
-damage = 10
-radius = 30
-maxAttacks = 2
-maxMovement = 180
-maxHealth = 80
-range = 70
-
-[Radar]
-cost = 6
-damage = 15
-radius = 30
-maxAttacks = 0
 maxMovement = 100
 maxHealth = 160
 range = 70
 
-[Cruiser]
+[Stealth]
+type = stealth
 cost = 6
 damage = 10
-radius = 25
+radius = 15
+maxAttacks = 2
+maxMovement = 180
+maxHealth = 75
+range = 70
+
+[Radar]
+type = radar
+cost = 6
+damage = 15
+radius = 15
+maxAttacks = 0
+maxMovement = 100
+maxHealth = 150
+range = 70
+
+[Cruiser]
+type = cruiser
+cost = 6
+damage = 10
+radius = 12
 maxAttacks = 2
 maxMovement = 140
-maxHealth = 240
+maxHealth = 180
 range = 60
 
 [Weapons Platform]
+type = weaponsPlatform
 cost = 6
-damage = 16
-radius = 30
+damage = 12
+radius = 15
 maxAttacks = 1
 maxMovement = 40
-maxHealth = 120
+maxHealth = 150
 range = 1000
 
 [FTL]
+type = ftl
 cost = 4
 damage = 5
-radius = 24
+radius = 12
 maxAttacks = 3
 maxMovement = 160
 maxHealth = 70
 range = 60
 
 [Fighter]
+type = fighter
 cost = 2
 damage = 4
-radius = 24
+radius = 12
 maxAttacks = 3
 maxMovement = 160
 maxHealth = 70
 range = 60
 
 [Blitz]
+type = blitz
 cost = 2
 damage = 2
-radius = 20
+radius = 10
 maxAttacks = 3
 maxMovement = 200
 maxHealth = 50
 range = 50
 
 [Kamakazi]
+type = kamikazi
 cost = 2
 damage = 50
-radius = 20
+radius = 10
 maxAttacks = 0
 maxMovement = 140
 maxHealth = 50
+range = 0
+
+[Mine]
+type = mine
+cost = 0
+damage = 40
+radius = 40
+maxAttacks = 0
+maxMovement = 0
+maxHealth = 1
 range = 0
