--- a/client/python/Makefile
+++ b/client/python/Makefile
@@ -4,9 +4,9 @@ submit: libclient.so
 	@echo "$(shell cd ..;sh submit.sh c)"
 
 
-libclient.so: ../c/*.cpp ../c/*.h
-	$(MAKE) -C ../c/ libclient.so
-	cp ../c/libclient.so libclient.so
+libclient.so: ../library/*.cpp ../library/*.h
+	$(MAKE) -C ../library/ libclient.so
+	cp ../library/libclient.so libclient.so
 
 
 clean:
