Updated clients and server with new codegen output with upated data.py

--- a/server/config/units.cfg
+++ b/server/config/units.cfg
@@ -6,6 +6,7 @@ maxAttacks = 0
 maxMovement = 40
 maxHealth = 800
 range = 120
+selfDestructDamage = 0
 
 [Battleship]
 cost = 20
@@ -15,6 +16,7 @@ maxAttacks = 2
 maxMovement = 240
 maxHealth = 400
 range = 150
+selfDestructDamage = 1000
 
 [Juggernaut]
 cost = 12
@@ -24,6 +26,7 @@ maxAttacks = 6
 maxMovement = 130
 maxHealth = 240
 range = 80
+selfDestructDamage = 1000
 
 [Mine Layer]
 cost = 8
@@ -33,6 +36,7 @@ maxAttacks = 12
 maxMovement = 130
 maxHealth = 180
 range = 120
+selfDestructDamage = 1000
 
 [Engineering]
 cost = 8
@@ -42,6 +46,7 @@ maxAttacks = 0
 maxMovement = 100
 maxHealth = 160
 range = 80
+selfDestructDamage = 1000
 
 [EMP]
 cost = 8
@@ -51,6 +56,7 @@ maxAttacks = 1
 maxMovement = 100
 maxHealth = 100
 range = 70
+selfDestructDamage = 1000
 
 [Stealth]
 cost = 6
@@ -60,6 +66,7 @@ maxAttacks = 2
 maxMovement = 180
 maxHealth = 75
 range = 70
+selfDestructDamage = 1000
 
 [Radar]
 cost = 6
@@ -69,6 +76,7 @@ maxAttacks = 0
 maxMovement = 100
 maxHealth = 150
 range = 70
+selfDestructDamage = 1000
 
 [Cruiser]
 cost = 6
@@ -78,6 +86,7 @@ maxAttacks = 2
 maxMovement = 140
 maxHealth = 180
 range = 60
+selfDestructDamage = 1000
 
 [Weapons Platform]
 cost = 6
@@ -87,6 +96,7 @@ maxAttacks = 1
 maxMovement = 40
 maxHealth = 150
 range = 1000
+selfDestructDamage = 1000
 
 [FTL]
 cost = 4
@@ -96,6 +106,7 @@ maxAttacks = 3
 maxMovement = 160
 maxHealth = 70
 range = 60
+selfDestructDamage = 1000
 
 [Fighter]
 cost = 2
@@ -105,6 +116,7 @@ maxAttacks = 3
 maxMovement = 160
 maxHealth = 70
 range = 60
+selfDestructDamage = 1000
 
 [Blitz]
 cost = 2
@@ -114,6 +126,7 @@ maxAttacks = 3
 maxMovement = 200
 maxHealth = 50
 range = 50
+selfDestructDamage = 1000
 
 [Kamakazi]
 cost = 2
@@ -123,6 +136,7 @@ maxAttacks = 0
 maxMovement = 140
 maxHealth = 50
 range = 0
+selfDestructDamage = 1000
 
 [Mine]
 cost = 0
@@ -132,3 +146,4 @@ maxAttacks = 0
 maxMovement = 0
 maxHealth = 1
 range = 0
+selfDestructDamage = 1000
