Changes from the meeting

--- a/server/config/units.cfg
+++ b/server/config/units.cfg
@@ -38,7 +38,7 @@ maxHealth = 180
 range = 120
 selfDestructDamage = 1000
 
-[Engineering]
+[Support]
 cost = 8
 damage = 0
 radius = 15
@@ -68,16 +68,6 @@ maxHealth = 75
 range = 70
 selfDestructDamage = 1000
 
-[Radar]
-cost = 6
-damage = 15
-radius = 15
-maxAttacks = 0
-maxMovement = 100
-maxHealth = 150
-range = 70
-selfDestructDamage = 1000
-
 [Cruiser]
 cost = 6
 damage = 10
@@ -98,17 +88,7 @@ maxHealth = 150
 range = 1000
 selfDestructDamage = 1000
 
-[FTL]
-cost = 4
-damage = 5
-radius = 12
-maxAttacks = 3
-maxMovement = 160
-maxHealth = 70
-range = 60
-selfDestructDamage = 1000
-
-[Fighter]
+[Interceptor]
 cost = 2
 damage = 4
 radius = 12
@@ -118,7 +98,7 @@ maxHealth = 70
 range = 60
 selfDestructDamage = 1000
 
-[Blitz]
+[Bomber]
 cost = 2
 damage = 2
 radius = 10
@@ -126,16 +106,6 @@ maxAttacks = 3
 maxMovement = 200
 maxHealth = 50
 range = 50
-selfDestructDamage = 1000
-
-[Kamakazi]
-cost = 2
-damage = 50
-radius = 10
-maxAttacks = 0
-maxMovement = 140
-maxHealth = 50
-range = 0
 selfDestructDamage = 1000
 
 [Mine]
