--- a/server/config/defaults.cfg
+++ b/server/config/defaults.cfg
@@ -3,6 +3,7 @@ turnLimit = 100
 startTime = 10
 timeInc = 1
 victories = 3
-radius = 500
+innerRadius = 125
+outerRadius = 500
 startEnergy = 50
 shipsPerRound = 5
