Fixed the server to no longer use innerRadius and outerRadius

--- a/server/config/defaults.cfg
+++ b/server/config/defaults.cfg
@@ -3,7 +3,6 @@ turnLimit = 100
 startTime = 10
 timeInc = 1
 victories = 5
-innerRadius = 0
-outerRadius = 500
+mapRadius = 500
 startEnergy = 50
 shipsPerRound = 4
